--- a/ControlDocumentoFactura.WebApi/appsettings.json
+++ b/ControlDocumentoFactura.WebApi/appsettings.json
@@ -8,12 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReservaDbConnectionString": "Server=localhost;Database=FacturasDb;User=sa;Password=password123!;"
+    "ReservaDbConnectionString": "Data Source=DESKTOP-7VVO4V5\\SQLEXPRESS;Initial catalog=FacturaDb;Integrated Security=True"
 
   },
-  "AWS": {
-    "Profile": "local-test-profile",
-    "Region": "us-west-2"
-  },
-  "SupportEmail": "TechSupport@example.com"
+  "SupportEmail": "controlfactura@nur.edu",
+  "QueueName": "recibos-queue",
+  "AccessKey": "AKIASZCTJFEF5SCG2NER",
+  "SecretKey": "BNtucpVjRgHZ23lB9tAMj93fq3JsS3XL3he0qb6+",
+  "myQueueUrl": "https://sqs.us-east-1.amazonaws.com/191300708619/recibos-queue"
 }
