--- a/ControlDocumentoFactura.WebApi/appsettings.json
+++ b/ControlDocumentoFactura.WebApi/appsettings.json
@@ -12,8 +12,8 @@
 
   },
   "SupportEmail": "controlfactura@nur.edu",
-  "QueueName": "recibos-queue",
+  "QueueName": "flights_factura",
   "AccessKey": "AKIASZCTJFEF5SCG2NER",
   "SecretKey": "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",
-  "myQueueUrl": "https://sqs.us-east-1.amazonaws.com/191300708619/recibos-queue"
+  "myQueueUrl": "https://sqs.us-east-1.amazonaws.com/191300708619/flights_factura"
 }
