--- a/ControlDocumentoFactura.WebApi/appsettings.json
+++ b/ControlDocumentoFactura.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReservaDbConnectionString": "Server=localhost;Database=FacturasDb;User=sa;Password=password123!;"
+    "ReservaDbConnectionString": "Server=68.183.28.27;Database=FacturasDb;User=sa;Password=password123!;"
 
   },
   "SupportEmail": "controlfactura@nur.edu",
