--- a/ControlDocumentoFactura.WebApi/ControlDocumentoFactura.WebApi.csproj
+++ b/ControlDocumentoFactura.WebApi/ControlDocumentoFactura.WebApi.csproj
@@ -24,4 +24,6 @@
     <ProjectReference Include="..\ControlDocumentoFactura.Infraestructura\ControlDocumentoFactura.Infraestructura.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
