--- a/ControlDocumentoFactura.Infraestructura/ControlDocumentoFactura.Infraestructura.csproj
+++ b/ControlDocumentoFactura.Infraestructura/ControlDocumentoFactura.Infraestructura.csproj
@@ -6,20 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="EntityFramework\Migrations\**" />
-    <EmbeddedResource Remove="EntityFramework\Migrations\**" />
-    <None Remove="EntityFramework\Migrations\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="EntityFramework\Migrations\ReadDbContextModelSnapshot.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ControlDocumentoFactura.Aplicacion\ControlDocumentoFactura.Aplicacion.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.2.113" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.16">
